2013-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement read from signed bit-field.

2013-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asxxsrc/asout.c,
	  src/stm8/main.c:
	  STM8: Applied patched from Valentin Dudouyt to improve error checking in assembler, implement initialization of globals, __interrupt.

2013-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c:
	  STM8: Implement multiplication.

2013-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix asmop freeing for GET_VALUE_AT_ADDRESS, do not share symbol aops to fix double free, fix large comparison, implement bit-field writes.

2013-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix unsigned cast, implement read from unsigned bit-field.
	* support/regression/tests/0fail.c,
	  support/regression/tests/0pass.c:
	  Dummy tests for debugging regression testing.

2013-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix in handling of result in a in addition, minor improvements.

2013-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix stack handling in signed cast, fix wide right shift, minor refactoring.

2013-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix handling of a in addition, subtraction and negation, more flexible copy, fix comparison.

2013-04-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Update TODO/todo comments to reflect known bug vs optimization potential.

2013-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Various fixes.

2013-04-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Make lack of support for bit-fields explicit, implement binary complement, minor improvements.

2013-04-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c: